base/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: devops-app
  labels:
    app.kubernetes.io/managed-by: kustomize
---
