base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target:        /
    nginx.ingress.kubernetes.io/proxy-body-size:       "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout:    "30"
    nginx.ingress.kubernetes.io/rate-limit:            "50"
spec:
  ingressClassName: nginx
  rules:
    - host: devops-app.local
      http:
        paths:
          - path:     /
            pathType: Prefix
            backend:
              service:
                name: devops-app
                port:
                  name: http
